# research-knowledge-base-v4

./: .gitignore  pyproject.toml
.agents/rules/: endpoint-tests.md  python-env-manager.md  running-backend-server.md  tech-stack.md  test-tools.md  ui-backend-interactions.md  vector-db.md
config/: settings.py  urls.py
events/: consumers.py  models.py
events/management/commands/: run_consumers.py
events/migrations/: 0003_alter_event_description_alter_event_entity.py
kb/: admin.py  api.py  middleware.py  models.py  schemas.py  tests_search_context.py
kb/management/commands/: tui.py
kb/migrations/: 0001_initial.py  0002_seed_defaults.py  0005_embeddingmodelconfig.py  0006_seed_embedding_config.py  0007_llmconfig_provider.py  0008_alter_llmconfig_provider_resourcechat.py  0010_resource_title.py  0011_reference.py  0012_knowledgegraphconfig_alter_llmconfig_provider.py  0014_alter_knowledgegraphconfig_package_name.py  0015_searchconfig.py
kb/services/: __init__.py  chat.py  chromadb_service.py  chunking.py  jina.py  llm.py
kb/services/search_engines/: __init__.py  loader.py  semantic_search.py
kb/tui/: app.py
tests/: conftest.py  search_engines.py  test_api.py  test_chat_streaming.py  test_consumers_kg.py  test_embedding.py  test_embedding_status.py  test_events.py  test_kg_config_api.py  test_llm_connection.py  test_reference_extraction.py  test_search_config_model.py  test_tui_forms.py  test_tui_robustness.py
